# whip

./: .dprint.json  .editorconfig  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  TODO.md
.cargo/: config.toml
.claude/: CLAUDE.md  localai-schemas.md  settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.omc/state/: subagent-tracking.json
crates/claude/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: auth.rs  config.rs  error.rs  lib.rs  persistence.rs  polling.rs  repository.rs
crates/github/: Cargo.toml
crates/github/src/: cache.rs  client.rs  error.rs  issue.rs  label.rs  lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: board.rs  dummy.rs  error.rs  label.rs  lib.rs  message.rs  task.rs
crates/taim-protocol/: Cargo.toml
crates/taim-protocol/src/: board.rs  dummy.rs  error.rs  lib.rs  message.rs  task.rs
crates/taim-tui/: Cargo.toml
crates/taim-tui/src/: app.rs  event.rs  lib.rs  state.rs  terminal.rs
crates/taim-tui/src/widgets/: board.rs  detail.rs  help.rs  lane.rs  markdown.rs  mod.rs  status_bar.rs  task_card.rs  tests.rs
crates/taim-tui/src/widgets/snapshots/: taim_tui__widgets__tests__snapshot_board_different_lane_selected.snap  taim_tui__widgets__tests__snapshot_board_narrow_terminal.snap  taim_tui__widgets__tests__snapshot_board_with_tasks.snap  taim_tui__widgets__tests__snapshot_detail_panel_empty_description.snap  taim_tui__widgets__tests__snapshot_detail_panel_failed.snap  taim_tui__widgets__tests__snapshot_detail_panel_idle.snap  taim_tui__widgets__tests__snapshot_detail_panel_inflight.snap  taim_tui__widgets__tests__snapshot_detail_panel_medium_width.snap  taim_tui__widgets__tests__snapshot_detail_panel_needs_attention.snap  taim_tui__widgets__tests__snapshot_detail_panel_success.snap  taim_tui__widgets__tests__snapshot_detail_panel_wide.snap  taim_tui__widgets__tests__snapshot_detail_panel_with_scroll.snap  taim_tui__widgets__tests__snapshot_empty_board.snap  taim_tui__widgets__tests__snapshot_help_overlay.snap  taim_tui__widgets__tests__snapshot_help_overlay_small_terminal.snap  taim_tui__widgets__tests__snapshot_lane_empty.snap  taim_tui__widgets__tests__snapshot_lane_with_tasks.snap  taim_tui__widgets__tests__snapshot_status_bar.snap  taim_tui__widgets__tests__snapshot_task_card_failed.snap  taim_tui__widgets__tests__snapshot_task_card_idle.snap  taim_tui__widgets__tests__snapshot_task_card_inflight.snap  taim_tui__widgets__tests__snapshot_task_card_needs_attention.snap  taim_tui__widgets__tests__snapshot_task_card_selected.snap  taim_tui__widgets__tests__snapshot_task_card_success.snap
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  layout.rs  lib.rs  settings_state.rs  state.rs  terminal.rs  test_utils.rs
crates/tui/src/widgets/: board.rs  detail.rs  help.rs  lane.rs  markdown.rs  mod.rs  settings.rs  status_bar.rs  task_card.rs  tests.rs
crates/tui/src/widgets/snapshots/: whip_tui__widgets__tests__snapshot_board_narrow_terminal.snap  whip_tui__widgets__tests__snapshot_board_with_tasks.snap  whip_tui__widgets__tests__snapshot_detail_panel_empty_description.snap  whip_tui__widgets__tests__snapshot_detail_panel_failed.snap  whip_tui__widgets__tests__snapshot_detail_panel_idle.snap  whip_tui__widgets__tests__snapshot_detail_panel_inflight.snap  whip_tui__widgets__tests__snapshot_detail_panel_medium_width.snap  whip_tui__widgets__tests__snapshot_detail_panel_needs_attention.snap  whip_tui__widgets__tests__snapshot_detail_panel_success.snap  whip_tui__widgets__tests__snapshot_detail_panel_wide.snap  whip_tui__widgets__tests__snapshot_detail_panel_with_scroll.snap  whip_tui__widgets__tests__snapshot_empty_board.snap  whip_tui__widgets__tests__snapshot_help_overlay.snap  whip_tui__widgets__tests__snapshot_help_overlay_small_terminal.snap  whip_tui__widgets__tests__snapshot_lane_empty.snap  whip_tui__widgets__tests__snapshot_lane_with_tasks.snap  whip_tui__widgets__tests__snapshot_settings_panel_authentication_section.snap  whip_tui__widgets__tests__snapshot_settings_panel_dirty.snap  whip_tui__widgets__tests__snapshot_settings_panel_empty.snap  whip_tui__widgets__tests__snapshot_settings_panel_polling_section.snap  whip_tui__widgets__tests__snapshot_settings_panel_small_terminal.snap  whip_tui__widgets__tests__snapshot_settings_panel_with_repositories.snap  whip_tui__widgets__tests__snapshot_status_bar.snap  whip_tui__widgets__tests__snapshot_task_card_failed.snap  whip_tui__widgets__tests__snapshot_task_card_idle.snap  whip_tui__widgets__tests__snapshot_task_card_inflight.snap  whip_tui__widgets__tests__snapshot_task_card_needs_attention.snap  whip_tui__widgets__tests__snapshot_task_card_selected.snap  whip_tui__widgets__tests__snapshot_task_card_success.snap
src/: main.rs
tests/: config_integration.rs
