[package]
name = "whip"
version = "0.0.1-dev"
description = "An AI Agent orchestrator using Claude Code — it's not slavery since I'm paying for the tokens, right?"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
whip-protocol = { workspace = true }
whip-tui = { workspace = true }
tokio = { workspace = true }

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Romain Marcadier <romain.muller@telecomnancy.net>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# TUI
ratatui = { version = "0.29" }
crossterm = { version = "0.28" }

# Error handling
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = { version = "1.5" }
insta = { version = "1.41" }

# Markdown parsing
pulldown-cmark = { version = "0.12" }

# Internal crates
whip-protocol = { path = "crates/protocol" }
whip-tui = { path = "crates/tui" }
