[package]
name = "whip"
version = "0.0.1-dev"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "An AI Agent orchestrator using Claude Code"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
whip-protocol = { workspace = true }
whip-tui = { workspace = true }

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Romain Marcadier <romain.muller@telecomnancy.net>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# TUI
crossterm = { version = "0.29" }
ratatui = { version = "0.30" }

# Error handling
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Testing
insta = { version = "1.41" }
proptest = { version = "1.5" }

# Markdown parsing
pulldown-cmark = { version = "0.13" }

# Internal crates
whip-protocol = { path = "crates/protocol" }
whip-tui = { path = "crates/tui" }
