[package]
name = "whip-github"
version = "0.0.1-dev"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GitHub API client for whip - handles issue fetching, caching, and token management"

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
octocrab = "0.49"
percent-encoding = "2.3"
secrecy = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
uuid = { workspace = true }
whip-protocol = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
