[package]
name = "whip-tui"
version = "0.0.1-dev"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for whip - Ratatui-based Kanban board interface"

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
pulldown-cmark = { workspace = true }
ratatui = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
whip-protocol = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
